--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=comandoia
+# Configuración de conexión a PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/malvinasIA
+spring.datasource.username=postgres
+spring.datasource.password=Aimara2023
+
+# Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Zona horaria
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
