Agrego modelos nuevos y modifico configuración

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=comandoia
 # Configuración de conexión a PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/malvinasIA
 spring.datasource.username=postgres
-spring.datasource.password=Aimara2023
+spring.datasource.password=Fostteroso1
 
 # Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
